@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- gutter clicks should focus the text area
+- gutter bracket select: shift-click not control-click?
 - need distinct default styles for new token types
 - HTML mode: use new token types
 - synchro scroll & folding
@@ -166,7 +168,6 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
 - autosave recent file list?
 - hypersearch refresh
 - option to disable floating window dock bar
-- alt-click on fold narrows
 
 + performance:
 
